# sayu

./: .env.example  .gitignore  .sayu.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.ko-kr.md  README.md  __main__.py  check_cursor_messages.py  cursor_test.txt  debug_collectors.py  debug_sayu_conversations.py  explore_cursor_data.py  final_test.txt  find_cursor_data.py  fix_cursor_collector.py  hello.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test-commit.sh  test-phase1.sh  test.txt  test2.txt  test4.txt  test6.txt  test_claude.rs  test_collection.py  test_collector.sh  test_collector_old.sh  test_context.txt  test_cursor.py  test_debug.txt  test_diff.py  test_file.txt  test_global_install.py  test_performance.py  test_progress.txt  (+2 more)
.claude/: settings.local.json
.sayu/cache/: last_commit_time_3883358252187256202.json
cli/: __init__.py  __main__.py  main.py
daemon/: __init__.py  sayud.py
domain/collectors/: __init__.py  claude.py  cli.py  conversation.py  conversation_base.py  cursor.py  git.py  manager.py
domain/events/: memory_store.py  store.py  store_manager.py  types.py
domain/git/: handlers.py  hooks.py
domain/summary/: __init__.py  event_filter.py  llm.py  minimal.py
i18n/: __init__.py
i18n/outputs/: en.py  ko.py
i18n/prompts/: en.py  ko.py
infra/api/: __init__.py  llm.py  llm_factory.py  llm_openrouter.py  llm_optimized.py
infra/cache/: __init__.py  manager.py
infra/config/: env_loader.py  manager.py
infra/shell/: __init__.py  executor.py
rusted/: .gitignore  Cargo.toml  README.md
rusted/src/: lib.rs
rusted/src/cli/: commands.rs  mod.rs
rusted/src/domain/: events.rs  mod.rs
rusted/src/infra/: config.rs  mod.rs  storage.rs
sayu_py/: .sayu.yml  pyproject.toml  test_hook.json
sayu_py/sayu/: cli.py
sayu_py/sayu/collectors/: __init__.py  claude_code.py
sayu_py/sayu/core/: storage.py
sayu_py/sayu/engine/: summarizer.py
sayu_py/sayu/visualizer/: timeline.py
shared/: constants.py  utils.py
src/: __init__.py  cli.py  config.py  lib.rs  main.rs  prompts.rs
src/cli/: commands.rs  index.ts
src/collectors/: __init__.py  base.rs  claude.rs  claude_code.py  cli.rs  cli.ts  cursor.rs  git.py  git.ts  llm-claude.ts  llm-cursor.ts  mod.rs  shell.rs
src/core/: __init__.py  collector-manager.ts  collector.py  config.ts  constants.ts  database.ts  error-handler.ts  git-hooks.ts  hook-handlers.ts  i18n.ts  llm-api.ts  shell.ts  storage.py  store-manager.ts  types.ts  utils.ts
src/core/collectors/: event-collector.ts
src/core/filters/: event-filter.ts
src/core/git/: git-info.ts
src/domain/: events.rs
src/domain/collectors/: base.ts  cli.ts  git.ts  llm-claude.ts  llm-cursor.ts  manager.ts
src/domain/events/: filter.ts  store-manager.ts  store.ts
src/domain/git/: handlers.ts  hooks.ts  info.ts
src/domain/summary/: event-filter.ts  llm.ts  minimal.ts
src/engine/: __init__.py  summarizer.py
src/i18n/: index.ts
src/i18n/outputs/: ko.ts
src/infra/: config.rs  storage.rs
src/infra/api/: llm.ts
src/infra/config/: manager.ts
src/llm/: client.rs  mod.rs  summarizer.rs
src/shared/: error-handler.ts  utils.ts
src/templates/outputs/: en.ts
src/templates/prompts/: en.ts  ko.ts
src/visualizer/: __init__.py  timeline.py
