[package]
name = "sayu"
version = "0.8.0"
edition = "2021"
authors = ["Hwisoo Kim"]
description = "Personal local blackbox for recording 'why' in commits"
license = "MIT"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# File system
dirs = "5.0"
walkdir = "2.5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.19"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }

# Git
git2 = "0.19"

# HTTP (for potential future API integration)
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tempfile = "3.12"
pretty_assertions = "1.4"

[features]
default = []
api = ["reqwest"]

[[bin]]
name = "sayu"
path = "src/main.rs"