[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sayu"
version = "1.0.0"
description = "AI conversation history tracker with timeline visualization"
readme = "README.md"
authors = [
    {name = "hwisu"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
sayu = "sayu.cli:main"

[tool.setuptools]
packages = ["sayu", "sayu.core", "sayu.collectors", "sayu.engine", "sayu.visualizer"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true